V1/VERSION_INFO.md
# VERSION_INFO

version_name = V1

version_role = active_project_root

project_container_root = C:\Users\oscarau\OneDrive - Microsoft\Desktop\Forecast Generation Codebase Improvement\AEGIS-FORESCASTING-IMPROVEMENT

active_project_root = C:\Users\oscarau\OneDrive - Microsoft\Desktop\Forecast Generation Codebase Improvement\AEGIS-FORESCASTING-IMPROVEMENT\V1

current_status = Stage 05 closed, Stage 06 approved, Audit #6 approved

next_stage = Stage 07 - Shiny MVP Implementation

next_block = 7.0 - Shiny Project Scaffold + Read-Only Data Loader

## Active Root Rules

- All active work must happen inside V1 unless explicitly instructed otherwise.
- The parent folder is only a project container/version root.
- Historical artifacts must not be rewritten solely to change old path text.
- Shiny must remain read-only and must not recompute metrics or forecasts.
- Stage 07 work must use V1 as the project root.
